--- a/sight.html
+++ b/sight.html
@@ -81,8 +81,8 @@
                 </select>
                 <select class="search__sort-buttons" id="sort">
                     <option class="search__sort-button" selected="selected" disabled value="all">Sort</option>
-                    <option class="search__sort-button" value="rare">Сортировка по рейтенгу</option>
-                    <option class="search__sort-button" value="rewiews">Сортировка по количеству отзывов</option>
+                    <option class="search__sort-button" value="rewiews_rare">Сортировка по рейтенгу</option>
+                    <option class="search__sort-button" value="rewiews_sum">Сортировка по количеству отзывов</option>
                 </select>
                 <button id="reset-all">Сбросить все</button>
             </div>
