--- a/sight.html
+++ b/sight.html
@@ -71,7 +71,6 @@
             <div class="search__box">
                 <div class="search__search-wrap">
                     <input class="search__search-wrap_search" type="text" id="searchInput" placeholder="Поиск...">
-                    <button class="search__search-wrap_search-btn" id="searchButton">Поиск</button>
                 </div>
                 <select class="search__filter-buttons" id="filter">
                     <option class="search__filter-button" value="all">Все</option>
@@ -101,7 +100,7 @@
                 <button class="pagination__button" id="prevPage">Предыдущая страница</button>
                 <span class="pagination__page-number" id="num">1</span>
                 <button class="pagination__button" id="nextPage">Следующая страница</button>
-                <button id="more">More</button>
+                <button id="more">Показать еще</button>
             </div>
             <script src="./assets/js/sight.js"></script>
         </div>
